Minor tweaks to fix various style problems
- Small vertical scrolling in timetable on Chrome
- Modules page content overflowing (due to missing container-fluid
  wrapper)
- Extra scrollbar caused by overflow: scroll

--- a/v3/src/styles/layout/nav.scss
+++ b/v3/src/styles/layout/nav.scss
@@ -40,8 +40,9 @@
 
   .nm-navbar-text {
     flex: 1 1 auto;
-    text-align: right;
     line-height: 1.15;
+    padding-left: $grid-gutter-width / 2;
+    text-align: right;
   }
 
   @include media-breakpoint-down(xs) {
@@ -53,6 +54,7 @@
 }
 
 .nm-nav-tabs {
+  // See site.scss for width on md and lg sizes
   display: flex;
   flex-direction: column;
   padding: 2rem 0 0;
@@ -72,9 +74,11 @@
     }
   }
 
+  // For breakpoint-sm and below (phones), show the links as icon tabs fixed
+  // below the top navbar
   @include media-breakpoint-down(sm) {
     background-color: #fff;
-    box-shadow: 0 0 15px -3px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 15px -3px rgba(#000, 0.4);
     flex-direction: row;
     height: $navbar-height;
     left: 0;
@@ -83,7 +87,6 @@
     z-index: 1;
 
     .nav-link {
-      display: block;
       flex: 1 auto;
       padding: 1rem 0;
       text-align: center;
@@ -94,11 +97,13 @@
     }
   }
 
+  // For breakpoint-md (tablets), show the links as compact buttons with labels
+  // below icons.
   @include media-breakpoint-only(md) {
     .nav-link {
-      text-align: center;
       font-size: 0.7rem;
       padding: 1rem 0;
+      text-align: center;
 
       .fa {
         font-size: 1.6rem;
@@ -111,6 +116,8 @@
     }
   }
 
+  // For breakpoint-lg (desktop), show the links as traditional link with icon
+  // to the left
   @include media-breakpoint-up(lg) {
     .nav-link {
       padding: 0.7rem 0 0.7rem 2rem;
